--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,32 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Oh_SVRecon_arXiv_2025">
+			<img src="publications/data/25_arxiv12.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>SVRecon: Sparse Voxel Rasterization for Surface Reconstruction</h4>
+			<p class="text-muted">
+				Seunghun Oh, Jaesung Choe, Dongjae Lee, Daeun Lee, Seunghoon Jeong, Yu-Chiang Frank Wang, and <b>Jaesik Park</b>.
+				<em>2511.17364 (arXiv), 2025</em>
+			</p>
+			<p>
+				<a href="http://arxiv.org/abs/2511.17364" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Oh_SVRecon_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Oh_SVRecon_arXiv_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Oh_SVRecon_arXiv_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Oh_SVRecon_arXiv_2025,<br>
+							Title={SVRecon: Sparse Voxel Rasterization for Surface Reconstruction},<br>
+							Author={Seunghun Oh and Jaesung Choe and Dongjae Lee and Daeun Lee and Seunghoon Jeong and Yu-Chiang Frank Wang and Jaesik Park},<br>
+							Journal={2511.17364 (arXiv)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Shin_MotionStream_arXiv_2025">
 			<img src="publications/data/25_arxiv10.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">MotionStream: Real-Time Video Generation with Interactive Motion Controls</h4>
@@ -935,6 +961,7 @@
 				Ashish Kumar, <b>Jaesik Park</b>, and Laxmidhar Behera.
 				<em>IEEE Robotics and Automation Letters (<b>RAL</b>), vol. 9, issue 1, 2024</em>
 				<br>(invited to the <b>ICRA2024 oral</b> presentation)
+				<br><a class="github-button" href="https://github.com/ashishkumar822/Jetson-SLAM" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star ashishkumar822/Jetson-SLAM on GitHub">Star</a><a class="github-button" href="https://github.com/ashishkumar822/Jetson-SLAM/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork ashishkumar822/Jetson-SLAM on GitHub">Fork</a>
 			</p>
 			<p>
 				<a href="https://ieeexplore.ieee.org/document/10305271" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
