update sunghyun choi

--- a/lab.html
+++ b/lab.html
@@ -268,7 +268,7 @@
 			<img src="source/members/sunghyun.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5>Sunghyun Choi</h5>
 			2026 Spring - current<br>
-			Master's student<br>
+			Master's student (dispatched from Samsung Research)<br>
 		</div>
 	</div>
 </div>
