--- a/publications.html
+++ b/publications.html
@@ -292,7 +292,7 @@
 			<p>
 				<a href="https://hjhyunjinkim.github.io/MH-3DGS" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
 				<a href="https://arxiv.org/abs/2506.12945" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a href="https://github.com/hjhyunjinkim/MH-3DGS" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
+				<a href="https://github.com/SNU-VGILab/MH-3DGS" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_MetropolisHastings_NeurIPS_2025_bibtex_button" aria-expanded="false" aria-controls="Kim_MetropolisHastings_NeurIPS_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kim_MetropolisHastings_NeurIPS_2025_bibtex_button">
