--- a/lab.html
+++ b/lab.html
@@ -241,12 +241,6 @@
 			Master's student<br>
 		</div>
 		<div class="col-md-2 text-center">
-			<img src="source/members/g1.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
-			<h5>Jiwon Yu</h5>
-			2025 Fall - current<br>
-			A humanoid with tactile hands<br>
-		</div>
-		<div class="col-md-2 text-center">
 			<img src="source/members/eunsung.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
 			<h5>Eunsung Cha</h5>
 			2026 Spring - current<br>
@@ -269,6 +263,12 @@
 			<h5>Sunghyun Choi</h5>
 			2026 Spring - current<br>
 			Master's student (dispatched from Samsung Research)<br>
+		</div>
+		<div class="col-md-2 text-center">
+			<img src="source/members/g1.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
+			<h5>Jiwon Yu</h5>
+			2026 Spring - current<br>
+			A humanoid with tactile hands<br>
 		</div>
 	</div>
 </div>
