adding openbox pdf file

--- a/publications.html
+++ b/publications.html
@@ -210,6 +210,7 @@
 				<br>(Accepted as a <b>spotlight</b> paper)
 			</p>
 			<p>
+				<a href="https://www.arxiv.org/abs/2512.01352" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_OpenBox_NeurIPS_2025_bibtex_button" aria-expanded="false" aria-controls="Lee_OpenBox_NeurIPS_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Lee_OpenBox_NeurIPS_2025_bibtex_button">
