adding RAL paper

--- a/publications.html
+++ b/publications.html
@@ -60,6 +60,102 @@
 <div class="container mt-4">
 <div class="row">
 	<div class="col-lg-12 text-start">
+		<h2>2026</h2>
+	</div>
+</div>
+</div>
+
+<div class="container">
+	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Jung_Targetless_RAL_2026">
+			<img src="publications/data/25_arxiv4.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">Targetless LiDAR-Camera Calibration with Neural Gaussian Splatting</h4>
+			<p class="text-muted">
+				Haebeom Jung, Namtae Kim, Jungwoo Kim, and <b>Jaesik Park</b>.
+				<em>IEEE Robotics and Automation Letters (<b>RAL</b>), 2026</em>
+			</p>
+			<p>
+				<a href="https://zang09.github.io/tlc-calib-site" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://arxiv.org/abs/2504.04597" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Jung_Targetless_RAL_2026_bibtex_button" aria-expanded="false" aria-controls="Jung_Targetless_RAL_2026_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Jung_Targetless_RAL_2026_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Jung_Targetless_RAL_2026,<br>
+							Title={Targetless LiDAR-Camera Calibration with Neural Gaussian Splatting},<br>
+							Author={Haebeom Jung and Namtae Kim and Jungwoo Kim and Jaesik Park},<br>
+							Journal={IEEE Robotics and Automation Letters (RAL)},<br>
+							Year={2026}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Lim_Towards_arXiv_2026">
+			<img src="publications/data/26_arxiv1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">Towards Zero-Shot Point Cloud Registration Across Diverse Scales, Scenes, and Sensor Setups</h4>
+			<p class="text-muted">
+				Hyungtae Lim, Minkyun Seo, Luca Carlone, and <b>Jaesik Park</b>.
+				<em>2601.02759 (arXiv), 2026</em>
+			</p>
+			<p>
+				<a href="http://arxiv.org/abs/2601.02759" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lim_Towards_arXiv_2026_bibtex_button" aria-expanded="false" aria-controls="Lim_Towards_arXiv_2026_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Lim_Towards_arXiv_2026_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Lim_Towards_arXiv_2026,<br>
+							Title={Towards Zero-Shot Point Cloud Registration Across Diverse Scales, Scenes, and Sensor Setups},<br>
+							Author={Hyungtae Lim and Minkyun Seo and Luca Carlone and Jaesik Park},<br>
+							Journal={2601.02759 (arXiv)},<br>
+							Year={2026}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Ghimire_OneCycle_WACV_2026">
+			<img src="publications/data/25_arxiv3.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">One-Cycle Structured Pruning via Stability-Driven Subnetwork Search</h4>
+			<p class="text-muted">
+				Deepak Ghimire, Dayoung Kil, Seonghwan Jeong, <b>Jaesik Park</b>, and Seong-Heum Kim.
+				<em>Winter Conf. on Applications of Computer Vision (<b>WACV</b>), 2026</em>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2501.13439" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Ghimire_OneCycle_WACV_2026_bibtex_button" aria-expanded="false" aria-controls="Ghimire_OneCycle_WACV_2026_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Ghimire_OneCycle_WACV_2026_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Ghimire_OneCycle_WACV_2026,<br>
+							Title={One-Cycle Structured Pruning via Stability-Driven Subnetwork Search},<br>
+							Author={Deepak Ghimire and Dayoung Kil and Seonghwan Jeong and Jaesik Park and Seong-Heum Kim},<br>
+							Booktitle={Proceedings of the Winter Conf. on Applications of Computer Vision (WACV)},<br>
+							Year={2026}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="container mt-4">
+	<hr class="py-1">
+</div>
+
+<div class="container mt-4">
+<div class="row">
+	<div class="col-lg-12 text-start">
 		<h2>2025</h2>
 	</div>
 </div>
@@ -139,33 +235,6 @@
 							Title={TRACE: Your Diffusion Model is Secretly an Instance Edge Detector},<br>
 							Author={Sanghyun Jo and Ziseok Lee and Wooyeol Lee and Jonghyun Choi and Jaesik Park and Kyungsu Kim},<br>
 							Journal={2503.07982 (arXiv)},<br>
-							Year={2025}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center" id="Jung_Targetless_arXiv_2025">
-			<img src="publications/data/25_arxiv4.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4 class="em-tight">Targetless LiDAR-Camera Calibration with Neural Gaussian Splatting</h4>
-			<p class="text-muted">
-				Haebeom Jung, Namtae Kim, Jungwoo Kim, and <b>Jaesik Park</b>.
-				<em>2504.04597 (arXiv), 2025</em>
-			</p>
-			<p>
-				<a href="https://zang09.github.io/tlc-calib-site" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
-				<a href="https://arxiv.org/abs/2504.04597" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Jung_Targetless_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Jung_Targetless_arXiv_2025_bibtex_button">BibTeX</a>
-			</p>
-			<div class="collapse" id="Jung_Targetless_arXiv_2025_bibtex_button">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@article{Jung_Targetless_arXiv_2025,<br>
-							Title={Targetless LiDAR-Camera Calibration with Neural Gaussian Splatting},<br>
-							Author={Haebeom Jung and Namtae Kim and Jungwoo Kim and Jaesik Park},<br>
-							Journal={2504.04597 (arXiv)},<br>
 							Year={2025}<br>
 							}
 						</p>
@@ -304,32 +373,6 @@
 							Title={Metropolis-Hastings Sampling for 3D Gaussian Reconstruction},<br>
 							Author={Hyunjin Kim and Haebeom Jung and Jaesik Park},<br>
 							Booktitle={Proceedings of the Int. Conf. on Neural Information Processing Systems (NeurIPS)},<br>
-							Year={2025}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center" id="Ghimire_OneCycle_WACV_2025">
-			<img src="publications/data/25_arxiv3.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4 class="em-tight">One-Cycle Structured Pruning via Stability-Driven Subnetwork Search</h4>
-			<p class="text-muted">
-				Deepak Ghimire, Dayoung Kil, Seonghwan Jeong, <b>Jaesik Park</b>, and Seong-Heum Kim.
-				<em>Winter Conf. on Applications of Computer Vision (<b>WACV</b>), 2025</em>
-			</p>
-			<p>
-				<a href="https://arxiv.org/abs/2501.13439" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Ghimire_OneCycle_WACV_2025_bibtex_button" aria-expanded="false" aria-controls="Ghimire_OneCycle_WACV_2025_bibtex_button">BibTeX</a>
-			</p>
-			<div class="collapse" id="Ghimire_OneCycle_WACV_2025_bibtex_button">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@inproceedings{Ghimire_OneCycle_WACV_2025,<br>
-							Title={One-Cycle Structured Pruning via Stability-Driven Subnetwork Search},<br>
-							Author={Deepak Ghimire and Dayoung Kil and Seonghwan Jeong and Jaesik Park and Seong-Heum Kim},<br>
-							Booktitle={Proceedings of the Winter Conf. on Applications of Computer Vision (WACV)},<br>
 							Year={2025}<br>
 							}
 						</p>
