--- a/data/news.html
+++ b/data/news.html
@@ -1,4 +1,5 @@
 [banner] 🙋‍♂️🙋‍♂️🙋‍♂️ We are seeking <b>Postdoctoral Researchers</b> specializing in computer vision and robotics. <button type="button" class="btn btn-outline-light btn-sm" onclick="window.open('https://docs.google.com/document/d/1j-OmO6c2r9fyXI3fsNTpLMkA8X5p8sndu9-rbJH7Vxg/edit?usp=sharing')">More details</button>
+2026.01. Our targetless LiDAR-Camera calibration approach has been accepted to <b>RAL</b> and will be presented at <b>ICRA 2026</b>.
 2025.10. I am honored to serve as an <b>Associate Editor</b> for IEEE Trans. on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>).
 2025.10. I will serve as a Lead Area Chair for <b>CVPR 2026</b>.
 2025.09. Our <a href="publications.html#Lee_OpenBox_NeurIPS_2025">OpenBox</a>, an automatic open-set 3D anotation method, is selected as a <b>spotlight paper</b> at NeurIPS 2025.
