--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ Jaesik Park is an Associate Professor of <a href="https://cse.snu.ac.kr/" target
 					🙋‍♂️🙋‍♂️🙋‍♂️ We are seeking <b>Postdoctoral Researchers</b> specializing in computer vision and robotics. <button type="button" class="btn btn-outline-light btn-sm" onclick="window.open('https://docs.google.com/document/d/1j-OmO6c2r9fyXI3fsNTpLMkA8X5p8sndu9-rbJH7Vxg/edit?usp=sharing')">More details</button>
 				</li>
 				<li class="list-group-item">
+					2026.01. Our targetless LiDAR-Camera calibration approach has been accepted to <b>RAL</b> and will be presented at <b>ICRA 2026</b>.
+				</li>
+				<li class="list-group-item">
 					2025.10. I am honored to serve as an <b>Associate Editor</b> for IEEE Trans. on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>).
 				</li>
 				<li class="list-group-item">
@@ -88,15 +91,15 @@ Jaesik Park is an Associate Professor of <a href="https://cse.snu.ac.kr/" target
 				<li class="list-group-item">
 					2025.07. Our <a href="publications.html#Seo_BUFFERX_ICCV_2025">BUFFER-X</a>, a tough 3D registration method, is selected as a <b>highlight paper</b> at ICCV 2025.
 				</li>
-				<li class="list-group-item">
-					2025.06. <b>Three papers</b> about <a href="publications.html#Lee_CF3_ICCV_2025">feature field recon</a>, <a href="publications.html#Seo_BUFFERX_ICCV_2025">3D registration</a>, and <a href="publications.html#Shin_Exploring_ICCV_2025">prompt-based image editing</a> are accepted to <b>ICCV 2025</b>.
-				</li>
 			</ul>
 			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
 				Previous &#9661;
 			</button>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2025.06. <b>Three papers</b> about <a href="publications.html#Lee_CF3_ICCV_2025">feature field recon</a>, <a href="publications.html#Seo_BUFFERX_ICCV_2025">3D registration</a>, and <a href="publications.html#Shin_Exploring_ICCV_2025">prompt-based image editing</a> are accepted to <b>ICCV 2025</b>.
+					</li>
 					<li class="list-group-item">
 						2025.05. GigaGAN is referred to as <b>one of the most cited papers</b> in 2023 by Stanford's AI Index Report (<a href="https://youtu.be/LfYotFKR0QI?si=yI98bhtVxMqlHrmg&t=161">Korean Youtube</a>)
 					</li>
