--- a/publications.html
+++ b/publications.html
@@ -73,6 +73,7 @@
 			<p class="text-muted">
 				Haebeom Jung, Namtae Kim, Jungwoo Kim, and <b>Jaesik Park</b>.
 				<em>IEEE Robotics and Automation Letters (<b>RAL</b>), 2026</em>
+				<br>(Invited for an <b>oral</b> presentation at <b>ICRA 2026</b>)
 			</p>
 			<p>
 				<a href="https://zang09.github.io/tlc-calib-site" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
@@ -98,8 +99,9 @@
 			<img src="publications/data/26_arxiv1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">Towards Zero-Shot Point Cloud Registration Across Diverse Scales, Scenes, and Sensor Setups</h4>
 			<p class="text-muted">
-				Hyungtae Lim, Minkyun Seo, Luca Carlone, and <b>Jaesik Park</b>.
+				Hyungtae Lim*, Minkyun Seo*, Luca Carlone, and <b>Jaesik Park</b>.
 				<em>2601.02759 (arXiv), 2026</em>
+				<br>(*Equal contribution)
 			</p>
 			<p>
 				<a href="http://arxiv.org/abs/2601.02759" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
@@ -1004,7 +1006,7 @@
 			<p class="text-muted">
 				Ashish Kumar, <b>Jaesik Park</b>, and Laxmidhar Behera.
 				<em>IEEE Robotics and Automation Letters (<b>RAL</b>), vol. 9, issue 1, 2024</em>
-				<br>(invited to the <b>ICRA2024 oral</b> presentation)
+				<br>(Invited for an <b>oral</b> presentation at <b>ICRA 2024</b>)
 				<br><a class="github-button" href="https://github.com/ashishkumar822/Jetson-SLAM" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star ashishkumar822/Jetson-SLAM on GitHub">Star</a><a class="github-button" href="https://github.com/ashishkumar822/Jetson-SLAM/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork ashishkumar822/Jetson-SLAM on GitHub">Fork</a>
 			</p>
 			<p>
