--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ Jaesik Park is an Associate Professor of <a href="https://cse.snu.ac.kr/" target
 					🙋‍♂️🙋‍♂️🙋‍♂️ We are seeking <b>Postdoctoral Researchers</b> specializing in computer vision and robotics. <button type="button" class="btn btn-outline-light btn-sm" onclick="window.open('https://docs.google.com/document/d/1j-OmO6c2r9fyXI3fsNTpLMkA8X5p8sndu9-rbJH7Vxg/edit?usp=sharing')">More details</button>
 				</li>
 				<li class="list-group-item">
+					2026.01. <b>Three papers</b> about <a href="publications.html#Do_Direct_ICLR_2026">image to 3D human</a>, <a href="publications.html#Jo_TRACE_ICLR_2026">diffusion edge detector</a>, and <a href="publications.html#Shin_MotionStream_ICLR_2026">real-time video editing</a> are accepted to <b>ICLR 2026</b>.
+				</li>
+				<li class="list-group-item">
 					2026.01. Our targetless LiDAR-Camera calibration approach has been accepted to <b>RAL</b> and will be presented at <b>ICRA 2026</b>.
 				</li>
 				<li class="list-group-item">
@@ -88,15 +91,15 @@ Jaesik Park is an Associate Professor of <a href="https://cse.snu.ac.kr/" target
 				<li class="list-group-item">
 					2025.09. <b>Four papers</b> about <a href="publications.html#Lee_OpenBox_NeurIPS_2025">3D anotation</a>, <a href="publications.html#Kim_MetropolisHastings_NeurIPS_2025">GS sampling</a>, <a href="publications.html#Musacchio_Holistic_NeurIPS_2025">order prediction</a>, and <a href="publications.html#Jeon_TreeGuided_NeurIPS_2025">diffusion planner</a> are accepted to <b>NeurIPS 2025</b>.
 				</li>
-				<li class="list-group-item">
-					2025.07. Our <a href="publications.html#Seo_BUFFERX_ICCV_2025">BUFFER-X</a>, a tough 3D registration method, is selected as a <b>highlight paper</b> at ICCV 2025.
-				</li>
 			</ul>
 			<button class="btn btn-outline-secondary shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#previousNews" aria-expanded="false" aria-controls="previousNews">
 				Previous &#9661;
 			</button>
 			<div class="collapse" id="previousNews">
 				<ul class="list-group shadow-sm">
+					<li class="list-group-item">
+						2025.07. Our <a href="publications.html#Seo_BUFFERX_ICCV_2025">BUFFER-X</a>, a tough 3D registration method, is selected as a <b>highlight paper</b> at ICCV 2025.
+					</li>
 					<li class="list-group-item">
 						2025.06. <b>Three papers</b> about <a href="publications.html#Lee_CF3_ICCV_2025">feature field recon</a>, <a href="publications.html#Seo_BUFFERX_ICCV_2025">3D registration</a>, and <a href="publications.html#Shin_Exploring_ICCV_2025">prompt-based image editing</a> are accepted to <b>ICCV 2025</b>.
 					</li>
