--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,84 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Do_Direct_ICLR_2026">
+			<img src="publications/data/26_iclr1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">Direct Reward Fine-Tuning on Poses for Single Image to 3D Human in the Wild</h4>
+			<p class="text-muted">
+				Seunguk Do, Minwoo Huh, Joonghyuk Shin, and <b>Jaesik Park</b>.
+				<em>Int. Conf. on Learning Representations (<b>ICLR</b>), 2026</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Do_Direct_ICLR_2026_bibtex_button" aria-expanded="false" aria-controls="Do_Direct_ICLR_2026_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Do_Direct_ICLR_2026_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Do_Direct_ICLR_2026,<br>
+							Title={Direct Reward Fine-Tuning on Poses for Single Image to 3D Human in the Wild},<br>
+							Author={Seunguk Do and Minwoo Huh and Joonghyuk Shin and Jaesik Park},<br>
+							Booktitle={Proceedings of the Int. Conf. on Learning Representations (ICLR)},<br>
+							Year={2026}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Jo_TRACE_ICLR_2026">
+			<img src="publications/data/25_arxiv11.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>TRACE: Your Diffusion Model is Secretly an Instance Edge Detector</h4>
+			<p class="text-muted">
+				Sanghyun Jo, Ziseok Lee, Wooyeol Lee, Jonghyun Choi, <b>Jaesik Park</b>, and Kyungsu Kim.
+				<em>Int. Conf. on Learning Representations (<b>ICLR</b>), 2026</em>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2503.07982" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Jo_TRACE_ICLR_2026_bibtex_button" aria-expanded="false" aria-controls="Jo_TRACE_ICLR_2026_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Jo_TRACE_ICLR_2026_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Jo_TRACE_ICLR_2026,<br>
+							Title={TRACE: Your Diffusion Model is Secretly an Instance Edge Detector},<br>
+							Author={Sanghyun Jo and Ziseok Lee and Wooyeol Lee and Jonghyun Choi and Jaesik Park and Kyungsu Kim},<br>
+							Booktitle={Proceedings of the Int. Conf. on Learning Representations (ICLR)},<br>
+							Year={2026}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center" id="Shin_MotionStream_ICLR_2026">
+			<img src="publications/data/25_arxiv10.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">MotionStream: Real-Time Video Generation with Interactive Motion Controls</h4>
+			<p class="text-muted">
+				Joonghyuk Shin, Zhengqi Li, Richard Zhang, Jun-Yan Zhu, <b>Jaesik Park</b>, Eli Schechtman, and Xun Huang.
+				<em>Int. Conf. on Learning Representations (<b>ICLR</b>), 2026</em>
+			</p>
+			<p>
+				<a href="https://joonghyuk.com/motionstream-web/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://arxiv.org/abs/2511.01266" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_MotionStream_ICLR_2026_bibtex_button" aria-expanded="false" aria-controls="Shin_MotionStream_ICLR_2026_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Shin_MotionStream_ICLR_2026_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Shin_MotionStream_ICLR_2026,<br>
+							Title={MotionStream: Real-Time Video Generation with Interactive Motion Controls},<br>
+							Author={Joonghyuk Shin and Zhengqi Li and Richard Zhang and Jun-Yan Zhu and Jaesik Park and Eli Schechtman and Xun Huang},<br>
+							Booktitle={Proceedings of the Int. Conf. on Learning Representations (ICLR)},<br>
+							Year={2026}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Jung_Targetless_RAL_2026">
 			<img src="publications/data/25_arxiv4.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">Targetless LiDAR-Camera Calibration with Neural Gaussian Splatting</h4>
@@ -184,59 +262,6 @@
 							Title={SVRecon: Sparse Voxel Rasterization for Surface Reconstruction},<br>
 							Author={Seunghun Oh and Jaesung Choe and Dongjae Lee and Daeun Lee and Seunghoon Jeong and Yu-Chiang Frank Wang and Jaesik Park},<br>
 							Journal={2511.17364 (arXiv)},<br>
-							Year={2025}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center" id="Shin_MotionStream_arXiv_2025">
-			<img src="publications/data/25_arxiv10.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4 class="em-tight">MotionStream: Real-Time Video Generation with Interactive Motion Controls</h4>
-			<p class="text-muted">
-				Joonghyuk Shin, Zhengqi Li, Richard Zhang, Jun-Yan Zhu, <b>Jaesik Park</b>, Eli Schechtman, and Xun Huang.
-				<em>2511.01266 (arXiv), 2025</em>
-			</p>
-			<p>
-				<a href="https://joonghyuk.com/motionstream-web/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
-				<a href="https://arxiv.org/abs/2511.01266" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_MotionStream_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Shin_MotionStream_arXiv_2025_bibtex_button">BibTeX</a>
-			</p>
-			<div class="collapse" id="Shin_MotionStream_arXiv_2025_bibtex_button">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@article{Shin_MotionStream_arXiv_2025,<br>
-							Title={MotionStream: Real-Time Video Generation with Interactive Motion Controls},<br>
-							Author={Joonghyuk Shin and Zhengqi Li and Richard Zhang and Jun-Yan Zhu and Jaesik Park and Eli Schechtman and Xun Huang},<br>
-							Journal={2511.01266 (arXiv)},<br>
-							Year={2025}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center" id="Jo_TRACE_arXiv_2025">
-			<img src="publications/data/25_arxiv11.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>TRACE: Your Diffusion Model is Secretly an Instance Edge Detector</h4>
-			<p class="text-muted">
-				Sanghyun Jo, Ziseok Lee, Wooyeol Lee, Jonghyun Choi, <b>Jaesik Park</b>, and Kyungsu Kim.
-				<em>2503.07982 (arXiv), 2025</em>
-			</p>
-			<p>
-				<a href="https://arxiv.org/abs/2503.07982" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Jo_TRACE_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Jo_TRACE_arXiv_2025_bibtex_button">BibTeX</a>
-			</p>
-			<div class="collapse" id="Jo_TRACE_arXiv_2025_bibtex_button">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@article{Jo_TRACE_arXiv_2025,<br>
-							Title={TRACE: Your Diffusion Model is Secretly an Instance Edge Detector},<br>
-							Author={Sanghyun Jo and Ziseok Lee and Wooyeol Lee and Jonghyun Choi and Jaesik Park and Kyungsu Kim},<br>
-							Journal={2503.07982 (arXiv)},<br>
 							Year={2025}<br>
 							}
 						</p>
