adding spatial mosaic

--- a/publications.html
+++ b/publications.html
@@ -243,6 +243,32 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Lee_SpatialMosaic_arXiv_2025">
+			<img src="publications/data/25_arxiv13.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>SpatialMosaic: A Multiview VLM Dataset for Partial Visibility</h4>
+			<p class="text-muted">
+				Kanghee Lee, Injae Lee, Minseok Kwak, Kwonyoung Ryu, Jungi Hong, and <b>Jaesik Park</b>.
+				<em>2512.23365 (arXiv), 2025</em>
+			</p>
+			<p>
+				<a href="http://arxiv.org/abs/2512.23365" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_SpatialMosaic_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Lee_SpatialMosaic_arXiv_2025_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Lee_SpatialMosaic_arXiv_2025_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Lee_SpatialMosaic_arXiv_2025,<br>
+							Title={SpatialMosaic: A Multiview VLM Dataset for Partial Visibility},<br>
+							Author={Kanghee Lee and Injae Lee and Minseok Kwak and Kwonyoung Ryu and Jungi Hong and Jaesik Park},<br>
+							Journal={2512.23365 (arXiv)},<br>
+							Year={2025}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Oh_SVRecon_arXiv_2025">
 			<img src="publications/data/25_arxiv12.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>SVRecon: Sparse Voxel Rasterization for Surface Reconstruction</h4>
