--- a/data/news.html
+++ b/data/news.html
@@ -1,5 +1,5 @@
 [banner] 🙋‍♂️🙋‍♂️🙋‍♂️ We are seeking <b>Postdoctoral Researchers</b> specializing in computer vision and robotics. <button type="button" class="btn btn-outline-light btn-sm" onclick="window.open('https://docs.google.com/document/d/1j-OmO6c2r9fyXI3fsNTpLMkA8X5p8sndu9-rbJH7Vxg/edit?usp=sharing')">More details</button>
-2026.01. <b>Three papers</b> about <a href="publications.html#Do_Direct_ICLR_2026">image to 3D human</a>, <a href="publications.html#Jo_TRACE_ICLR_2026">diffusion edge</a>, and <a href="publications.html#Shin_MotionStream_ICLR_2026">real-time video editing</a> are accepted to <b>ICLR 2026</b>.
+2026.01. <b>Three papers</b> about <a href="publications.html#Do_Direct_ICLR_2026">image to 3D human</a>, <a href="publications.html#Jo_TRACE_ICLR_2026">diffusion edge</a>, and <a href="publications.html#Shin_MotionStream_ICLR_2026">real-time video generation</a> are accepted to <b>ICLR 2026</b>.
 2026.01. Our targetless LiDAR-Camera calibration approach has been accepted to <b>RAL</b> and will be presented at <b>ICRA 2026</b>.
 2025.10. I am honored to serve as an <b>Associate Editor</b> for IEEE Trans. on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>).
 2025.10. I will serve as a Lead Area Chair for <b>CVPR 2026</b>.
