--- a/publications.html
+++ b/publications.html
@@ -122,7 +122,7 @@
 			<img src="publications/data/25_arxiv10.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">MotionStream: Real-Time Video Generation with Interactive Motion Controls</h4>
 			<p class="text-muted">
-				Joonghyuk Shin, Zhengqi Li, Richard Zhang, Jun-Yan Zhu, <b>Jaesik Park</b>, Eli Schechtman, and Xun Huang.
+				Joonghyuk Shin, Zhengqi Li, Richard Zhang, Jun-Yan Zhu, <b>Jaesik Park</b>, Eli Shechtman, and Xun Huang.
 				<em>Int. Conf. on Learning Representations (<b>ICLR</b>), 2026</em>
 			</p>
 			<p>
@@ -136,7 +136,7 @@
 						<p class="card-text text-start fw-lighter">
 							@inproceedings{Shin_MotionStream_ICLR_2026,<br>
 							Title={MotionStream: Real-Time Video Generation with Interactive Motion Controls},<br>
-							Author={Joonghyuk Shin and Zhengqi Li and Richard Zhang and Jun-Yan Zhu and Jaesik Park and Eli Schechtman and Xun Huang},<br>
+							Author={Joonghyuk Shin and Zhengqi Li and Richard Zhang and Jun-Yan Zhu and Jaesik Park and Eli Shechtman and Xun Huang},<br>
 							Booktitle={Proceedings of the Int. Conf. on Learning Representations (ICLR)},<br>
 							Year={2026}<br>
 							}
