adding iSD paper

--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,33 @@
 
 <div class="container">
 	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center" id="Kim_Stabilizing_arXiv_2026">
+			<img src="publications/data/26_arxiv2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">Stabilizing Consistency Training: A Flow Map Analysis and Self-Distillation</h4>
+			<p class="text-muted">
+				Youngjoong Kim, Duhoe Kim, Woosung Kim, and <b>Jaesik Park</b>.
+				<em>2601.22679 (arXiv), 2026</em>
+				<br>(*Equal contribution)
+			</p>
+			<p>
+				<a href="http://arxiv.org/abs/2601.22679" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_Stabilizing_arXiv_2026_bibtex_button" aria-expanded="false" aria-controls="Kim_Stabilizing_arXiv_2026_bibtex_button">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kim_Stabilizing_arXiv_2026_bibtex_button">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Kim_Stabilizing_arXiv_2026,<br>
+							Title={Stabilizing Consistency Training: A Flow Map Analysis and Self-Distillation},<br>
+							Author={Youngjoong Kim and Duhoe Kim and Woosung Kim and Jaesik Park},<br>
+							Journal={2601.22679 (arXiv)},<br>
+							Year={2026}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="col-lg-4 text-center" id="Do_Direct_ICLR_2026">
 			<img src="publications/data/26_iclr1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4 class="em-tight">Direct Reward Fine-Tuning on Poses for Single Image to 3D Human in the Wild</h4>
