--- a/publications.html
+++ b/publications.html
@@ -125,6 +125,7 @@
 			<p class="text-muted">
 				Sanghyun Jo, Ziseok Lee, Wooyeol Lee, Jonghyun Choi, <b>Jaesik Park</b>, and Kyungsu Kim.
 				<em>Int. Conf. on Learning Representations (<b>ICLR</b>), 2026</em>
+				<br>(<b>Oral</b> Presentation)
 			</p>
 			<p>
 				<a href="https://arxiv.org/abs/2503.07982" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
@@ -151,6 +152,7 @@
 			<p class="text-muted">
 				Joonghyuk Shin, Zhengqi Li, Richard Zhang, Jun-Yan Zhu, <b>Jaesik Park</b>, Eli Shechtman, and Xun Huang.
 				<em>Int. Conf. on Learning Representations (<b>ICLR</b>), 2026</em>
+				<br>(<b>Oral</b> Presentation)
 			</p>
 			<p>
 				<a href="https://joonghyuk.com/motionstream-web/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
