--- a/publications.html
+++ b/publications.html
@@ -123,9 +123,9 @@
 			<img src="publications/data/25_arxiv11.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>TRACE: Your Diffusion Model is Secretly an Instance Edge Detector</h4>
 			<p class="text-muted">
-				Sanghyun Jo, Ziseok Lee, Wooyeol Lee, Jonghyun Choi, <b>Jaesik Park</b>, and Kyungsu Kim.
+				Sanghyun Jo*, Ziseok Lee*, Wooyeol Lee, Jonghyun Choi, <b>Jaesik Park</b>†, and Kyungsu Kim†.
 				<em>Int. Conf. on Learning Representations (<b>ICLR</b>), 2026</em>
-				<br>(<b>Oral</b> presentation, 1.18% acceptance rate)
+				<br>(*Equal contribution, †Corresponding authors, <b>Oral</b> presentation, 1.18% acceptance rate)
 			</p>
 			<p>
 				<a href="https://arxiv.org/abs/2503.07982" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
@@ -137,7 +137,7 @@
 						<p class="card-text text-start fw-lighter">
 							@inproceedings{Jo_TRACE_ICLR_2026,<br>
 							Title={TRACE: Your Diffusion Model is Secretly an Instance Edge Detector},<br>
-							Author={Sanghyun Jo and Ziseok Lee and Wooyeol Lee and Jonghyun Choi and Jaesik Park and Kyungsu Kim},<br>
+							Author={Sanghyun Jo and Ziseok Lee and Wooyeol Lee and Jonghyun Choi and Jaesik Park† and Kyungsu Kim†},<br>
 							Booktitle={Proceedings of the Int. Conf. on Learning Representations (ICLR)},<br>
 							Year={2026}<br>
 							}
