update injae's webpage

--- a/lab.html
+++ b/lab.html
@@ -150,7 +150,7 @@
 		</div>
 		<div class="col-md-2 text-center">
 			<img src="source/members/injae.jpg" class="rounded-circle img-thumbnail shadow mb-2 d-none d-md-block">
-			<h5><a href="https://scholar.google.com/citations?user=Nc1XmU8AAAAJ" target="_blank">In-Jae Lee</a></h5>
+			<h5><a href="https://oliver0922.github.io/" target="_blank">In-Jae Lee</a></h5>
 			2024 Fall - current<br>
 			Ph.D. student<br>
 		</div>
