--- a/publications.html
+++ b/publications.html
@@ -692,6 +692,7 @@
 			<p>
 				<a href="https://carpedkm.github.io/projects/improving_edit/index.html" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
 				<a href="https://arxiv.org/abs/2505.01079" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/carpedkm/improving-editability" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_Improving_CVPR_2025_bibtex_button" aria-expanded="false" aria-controls="Kim_Improving_CVPR_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Kim_Improving_CVPR_2025_bibtex_button">
@@ -747,6 +748,7 @@
 			<p>
 				<a href="https://seungjooshin.github.io/LocoGS" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
 				<a href="https://arxiv.org/abs/2501.05757" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/seungjooshin/LocoGS" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Shin_Localityaware_ICLR_2025_bibtex_button" aria-expanded="false" aria-controls="Shin_Localityaware_ICLR_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Shin_Localityaware_ICLR_2025_bibtex_button">
