adding code link for svrecon

--- a/publications.html
+++ b/publications.html
@@ -307,6 +307,7 @@
 			</p>
 			<p>
 				<a href="http://arxiv.org/abs/2511.17364" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/alvin0808/SVRecon" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Oh_SVRecon_arXiv_2025_bibtex_button" aria-expanded="false" aria-controls="Oh_SVRecon_arXiv_2025_bibtex_button">BibTeX</a>
 			</p>
 			<div class="collapse" id="Oh_SVRecon_arXiv_2025_bibtex_button">
