--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Jaesik Park is an Associate Professor of <a href="https://cse.snu.ac.kr/" target
 					2026.02. 🏆 Our team secured <b>first place</b> in the <a href="https://rdi.berkeley.edu/agentx-agentbeats.html">Berkeley RDI's AgentBeats Competition</a> (Phase 1, Game Agent Category)
 				</li>
 				<li class="list-group-item">
-					2026.01. <b>Three ICLR 2026 papers</b> about <a href="publications.html#Do_Direct_ICLR_2026">image to 3D human</a>, <a href="publications.html#Jo_TRACE_ICLR_2026">diffusion edge</a> <b>(oral)</b>, and <a href="publications.html#Shin_MotionStream_ICLR_2026">real-time video generation</a> <b>(oral)</b> are accepted.
+					2026.01. <b>Three ICLR papers</b> about <a href="publications.html#Do_Direct_ICLR_2026">image to 3D human</a>, <a href="publications.html#Jo_TRACE_ICLR_2026">diffusion edge</a> <b>(oral)</b>, and <a href="publications.html#Shin_MotionStream_ICLR_2026">real-time video generation</a> <b>(oral)</b> are accepted.
 				</li>
 				<li class="list-group-item">
 					2026.01. Our targetless LiDAR-camera calibration approach has been accepted to <b>RAL</b> and will be presented at <b>ICRA 2026</b>.
