--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Jaesik Park is an Associate Professor of <a href="https://cse.snu.ac.kr/" target
 					🙋‍♂️🙋‍♂️🙋‍♂️ We are seeking <b>Postdoctoral Researchers</b> specializing in computer vision and robotics. <button type="button" class="btn btn-outline-light btn-sm" onclick="window.open('https://docs.google.com/document/d/1j-OmO6c2r9fyXI3fsNTpLMkA8X5p8sndu9-rbJH7Vxg/edit?usp=sharing')">More details</button>
 				</li>
 				<li class="list-group-item">
-					2026.02. 🏆 Our team secured <b>first place</b> in the <a href="https://rdi.berkeley.edu/agentx-agentbeats.html">Berkeley RDI's AgentBeats Competition</a> (Phase 1, Game Agent Category)
+					2026.02. 🏆 Our team secured <b>first place</b> in the <a href="https://rdi.berkeley.edu/agentx-agentbeats.html" target="_blank">Berkeley RDI's AgentBeats Competition</a> (Phase 1, Game Agent Category)
 				</li>
 				<li class="list-group-item">
 					2026.01. <b>Three ICLR papers</b> about <a href="publications.html#Do_Direct_ICLR_2026">image to 3D human</a>, <a href="publications.html#Jo_TRACE_ICLR_2026">diffusion edge</a> <b>(oral)</b>, and <a href="publications.html#Shin_MotionStream_ICLR_2026">real-time video generation</a> <b>(oral)</b> are accepted.
